# MusicAndTech2Project

./: Justin Mucelli Link to Video.txt  README.md  Script.txt
bloopers/week4/: Rhythm0.mid  Rhythm1.mid  Rhythm2.mid  Rhythm3.mid  Rhythm4.mid  Rhythm5.mid  Rhythm6.mid  Rhythm7.mid  Rhythm8.mid  Rhythm9.mid
bloopers/week5/: Rhythm0.mid  Rhythm1.mid  Rhythm4.mid  RootAndRhythm7.mid  RootAndRhythm8.mid
src/: ArgParser.cpp  Binasc.cpp  CMakeLists.txt  Chord.cpp  FFS.cmake  JazzMachine.cpp  MidiEvent.cpp  MidiEventList.cpp  MidiFile.cpp  MidiMessage.cpp  Options.cpp  a.out  config.txt  jazz  jazzMachine.cpp  main.cpp  pitchMap.cpp  rhythmMap.cpp  rootMap.cpp  test.cpp  utils.cpp
src/creations/FMajor/: 0.mid  1.mid  2.mid  3.mid  4.mid  5.mid  6.mid  7.mid  8.mid  9.mid
testing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp  testcpp
tools/: 80off.cpp  asciimidi.cpp  binasc.cpp  createmidifile.cpp  createmidifile2.cpp  drumtab.cpp  durations.cpp  extractlyrics.cpp  henonfile.cpp  maxtick.cpp  mid2hex.cpp  mid2hum.cpp  mid2mat.cpp  mid2mtb.cpp  mid2svg.cpp  midi2beep.cpp  midi2binasc.cpp  midi2melody.cpp  midi2notes.cpp  midi2skini.cpp  midi2text.cpp  midicater.cpp  midiexcerpt.cpp  midimixup.cpp  miditime.cpp  peep2midi.cpp  perfid.cpp  readstatus.cpp  redexpress.cpp  removenote.cpp  retick.cpp  shutak.cpp  smfdur.cpp  stretch.cpp  sysextest.cpp  text2midi.cpp  textmidi.cpp  toascii.cpp  tobinary.cpp  type0.cpp  (+1 more)
updates/: Week1.txt  Week11.txt  Week11?.txt  Week2.txt  Week3.txt  Week4.txt  Week5.txt  Week6.txt  Week7.txt  Week9.txt
(+135 files in other folders)
